--- a/软件管理.md
+++ b/软件管理.md
@@ -11,6 +11,54 @@
 
 **conda**是由Continuum Analytics开发的包管理器，适用于管理Python, R, Node.js和Java等编写的程序的包管理，其不被任何编程语言默认提供。只能通过安装Anaconda或Miniconda来启用它。如果您有兴趣详细地了解它，请参阅由Anaconda提供的[说明文档](https://docs.conda.io/en/latest/)  
 ## 软件管理  
-软件安装的具体操作与使用的包管理器密切相关。
+软件安装的具体操作与使用的包管理器密切相关。`[packagename]：你想安装的软件名称`
 ### 使用yum
+```
+    yum search [keyword]
+    yum install [packagename]  
+    yum check-update
+    yum update
+    yum update [packagename]
+    yum remove [packagename]
+```    
+示例：  
+```
+    yum search git
+    yum install git
+    yum update git
+    yum remove git
+```    
+### 使用apt
+```
+    apt-cache search [keyword]
+    apt-get install [packagename]
+    apt-get remove [packagename]
+    apt-get update
+    apt-get upgrade
+```
+示例：
+```
+    apt-cache search git
+    apt-get install git
+    apt-get remove git
+    apt-get update
+    apt-get upgrade
+```
+### 使用pip   
+```  
+```  
+```  
+```  
+### 使用conda  
+```  
+```   
+```  
+```  
+### 手动安装  
+  
+#### 直接安装  
+  
+#### 手动编译  
+  
+## 配置软件源  
 
