--- a/软件管理.md
+++ b/软件管理.md
@@ -2,7 +2,7 @@
 基于主要交互方式的不同，Linux平台和windows平台的软件安装也相应的不同。Linux软件的安装很少是通过在窗口点击几次下一步实现的，而是通过命令告诉你的系统，让系统自行处理安装操作，只有少数至关重要的操作需要你亲自做决定。比如你只需要输入`pip install numpy`就可以安装好优秀的矩阵运算包numpy。  
 但这并不意味着Linux软件的安装是更为轻松的。抛却shell界面不如图形界面用户友好不说，大多数情况下Linux软件都有复杂的依赖关系，这是由软件的开源特性决定的。例如：你想要开发一个之前没有人开发过的工具，为了节省时间，一个很自然的想法是先试着找一些开源支持包，从中找到可以直接调用的程序接口，由此你的工具便和该支持包有了依赖关系。具体表现就是另一个人若想安装和使用你的工具，他必须同时安装被你调用的支持包。想象一下随着自由软件的流行，程序之间的依赖关系如同树形结构一般越来越复杂，A依赖B，B依赖C和D，C和D又分别依赖E、F和G、H，某一个用户为了安装A就得安装7个依赖包，他不得不从最底层的依赖包一个个安装，付出的时间成本将是巨大的。因此**为解决软件依赖关系而生的包管理器**的出现是必然的，包管理器成为主流也是大势所趋，所以我们要讨论的软件安装与我们所使用的包管理器密切相关。在讨论安装的具体操作之前，我们需要了解常用的包管理器。  
 ## 包管理器  
-在自由软件的世界向前发展的过程当中，为了用户使用方便，开发人员们为用户开发了各种各样的包管理器。包管理器可以使软件的安装简单化，但另一方面由于自由软件太过“自由”，出现了各种易用程度不尽相同的包管理器，每个包管理器都有自己的用法。比较著名的包管理器有yum、apt、pacman、aur、pip、conda和portage等。基于我先前的推荐，此篇中我们将主要讨论**yum、apt、pip和conda**这四个包管理器。
+在自由软件的世界向前发展的过程中，为了用户使用方便，开发人员们为用户开发了各种各样的包管理器。包管理器可以使软件的安装简单化，但另一方面由于自由软件太过“自由”，出现了各种易用程度不尽相同的包管理器，每个包管理器都有自己的用法。比较著名的包管理器有yum、apt、pacman、aur、pip、conda和portage等。基于我先前的推荐，此篇中我们将主要讨论**yum、apt、pip和conda**这四个包管理器。
 
 **yum**是由redhat开发的包管理器，主要被redhat系发行版，即red hat enterprise linux、centos和fedora等发行版采用。如果您有兴趣详细地了解它，请参阅由redhat编写的documentation中的[Chapter 14](https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/5/html/deployment_guide/c1-yum)  
 **apt**是由debian开发的包管理器，主要被debian系发行版，即debian、Ubuntu、elementaryos等发行版采用。如果您有兴趣详细地了解它，请参阅由Wikipedia词条[APT](https://zh.wikipedia.org/wiki/APT)及debian编写的说明文档[APT](https://wiki.debian.org/zh_CN/Apt)  
@@ -46,13 +46,55 @@
 ```
 ### 使用pip   
 ```  
+    pip --version # 查看已安装的pip版本
+    pip --help # 查看官方提供的帮助文档
+    pip search [packagename] # 查询
+    pip install [packagename] # 安装
+    pip install --upgrade [packagename] # 升级
+    pip uninstall [packaganame] # 卸载
+    pip list # 列出所有已安装的包
+    pip list -o # 仅列出可升级的包
+    
 ```  
+示例：
 ```  
+    pip search numpy
+    pip install numpy
+    pip install --upgrade numpy
+    pip uninstall numpy
 ```  
 ### 使用conda  
-```  
 ```   
+    conda --help
+    conda search [packagename]
+    conda install [packagename]
+    conda update [packagename]
+    conda remove [packagename]
+    conda list
 ```  
+示例：
+```
+    conda search scipy
+    conda install scipy
+    conda update scipy
+    conda remove scipy
+```
+conda是一个很特殊的包管理器，除了管理包之外，它还能管理**虚拟环境（environment）**。下面这一段关于environment的说明引自conda的官方文档。  
+
+> A conda environment is a directory that contains a specific collection of conda packages that you have installed. For example, you may have one environment with NumPy 1.7 and its dependencies, and another environment with NumPy 1.6 for legacy testing. If you change one environment, your other environments are not affected. You can easily activate or deactivate environments, which is how you switch between them. You can also share your environment with someone by giving them a copy of your environment.yaml file.   
+
+简单来说，conda的虚拟环境能够允许你在不同的虚拟环境下安装同一个软件的不同版本。
+conda默认安装的包即是在默认的虚拟环境里面，如果你没有激活该默认虚拟环境，你将无法正常使用由conda安装的包。因此，我们在此处有必要拓展conda的用法，通常使用如下的命令来管理虚拟环境：  
+envname: 要操作的environment  
+``` 
+    conda create --name envname # 创建虚拟环境
+    conda install -n envname packagename # 为指定的虚拟环境安装 包
+    conda create -n envname python # 用某个包创建虚拟环境
+    conda create -n envname python=3.5 # 用某个包的特定版本创建虚拟环境
+    conda info -e # 列出所有的虚拟环境
+    conda activate envname # 激活虚拟环境
+    deactivate # 退出
+    conda remove -n envname --all # 删除虚拟环境
 ```  
 ### 手动安装  
   
