--- a/软件管理.md
+++ b/软件管理.md
@@ -11,7 +11,14 @@
 
 **conda**是由Continuum Analytics开发的包管理器，适用于管理Python, R, Node.js和Java等编写的程序的包管理，其不被任何编程语言默认提供。只能通过安装Anaconda或Miniconda来启用它。如果您有兴趣详细地了解它，请参阅由Anaconda提供的[说明文档](https://docs.conda.io/en/latest/)  
 ## 软件管理  
-软件安装的具体操作与使用的包管理器密切相关。`[packagename]：你想安装的软件名称`
+软件安装的具体操作与使用的包管理器密切相关。  
+**你应当把这三个部分按照需要进行替换：**
+```
+[packagename]：要安装的软件名称 
+[envname]: 要操作的environment 
+[keyword]：检索关键词`
+```
+
 ### 使用yum
 ```
     yum search [keyword]
@@ -85,16 +92,16 @@ conda是一个很特殊的包管理器，除了管理包之外，它还能管理
 
 简单来说，conda的虚拟环境能够允许你在不同的虚拟环境下安装同一个软件的不同版本。
 conda默认安装的包即是在默认的虚拟环境里面，如果你没有激活该默认虚拟环境，你将无法正常使用由conda安装的包。因此，我们在此处有必要拓展conda的用法，通常使用如下的命令来管理虚拟环境：  
-envname: 要操作的environment  
+
 ``` 
-    conda create --name envname # 创建虚拟环境
-    conda install -n envname packagename # 为指定的虚拟环境安装 包
-    conda create -n envname python # 用某个包创建虚拟环境
-    conda create -n envname python=3.5 # 用某个包的特定版本创建虚拟环境
+    conda create --name [envname] # 创建虚拟环境
+    conda install -n [envname] [packagename] # 为指定的虚拟环境安装 包
+    conda create -n [envname] python # 用某个包创建虚拟环境
+    conda create -n [envname] python=3.5 # 用某个包的特定版本创建虚拟环境
     conda info -e # 列出所有的虚拟环境
-    conda activate envname # 激活虚拟环境
+    conda activate [envname] # 激活虚拟环境
     deactivate # 退出
-    conda remove -n envname --all # 删除虚拟环境
+    conda remove -n [envname] --all # 删除虚拟环境
 ```  
 ### 手动安装  
   
