--- a/软件管理.md
+++ b/软件管理.md
@@ -90,7 +90,7 @@ conda是一个很特殊的包管理器，除了管理包之外，它还能管理
 
 > A conda environment is a directory that contains a specific collection of conda packages that you have installed. For example, you may have one environment with NumPy 1.7 and its dependencies, and another environment with NumPy 1.6 for legacy testing. If you change one environment, your other environments are not affected. You can easily activate or deactivate environments, which is how you switch between them. You can also share your environment with someone by giving them a copy of your environment.yaml file.   
 
-简单来说，conda的虚拟环境能够允许你在不同的虚拟环境下安装同一个软件的不同版本。
+简单来说，conda的虚拟环境能够允许你在不同的虚拟环境下安装同一个软件的不同版本。  
 conda默认安装的包即是在默认的虚拟环境里面，如果你没有激活该默认虚拟环境，你将无法正常使用由conda安装的包。因此，我们在此处有必要拓展conda的用法，通常使用如下的命令来管理虚拟环境：  
 
 ``` 
@@ -104,9 +104,39 @@ conda默认安装的包即是在默认的虚拟环境里面，如果你没有激
     conda remove -n [envname] --all # 删除虚拟环境
 ```  
 ### 手动安装  
-  
+包管理器的出现固然能为我们使用 Linux 提供很大帮助，但毕竟它们是面向所有 Linux 用户的，因此并不包含所有生信人常用的工具。事实上，包管理器无法解决我们遇到的所有软件问题，虽然它们能够为我们节省时间，但仅限于它们能解决的部分。剩下的部分，我们需要亲自动手，它依然是充满挑战性的。但不用担心，问题一旦解决，亲自解决问题的成就感和积累的宝贵经验都属于你。当然，代价是你得进行多次尝试，这需要大量的时间和劳动力，以及屡次失败但依然坚持寻找问题根源的毅力。 
+我们将会通过tophat的安装让你了解手动安装的全过程，希望你有所收获。
 #### 直接安装  
-  
+tophat是生物信息学转录组分析的传统三件套（bowtie tophat cufflinks）之一，由约翰霍普斯金大学提供。它提供了预先编译好的包，这一类包不需要进行编译就可以直接安装和使用了。  
+``` 
+    wget -c https://ccb.jhu.edu/software/tophat/downloads/tophat-2.1.1.Linux_x86_64.tar.gz # 下载安装包
+    tar xvfz tophat-2.1.1.Linux_x86_64.tar.gz # 解压
+    mv tophat-2.1.1.Linux_x86_64 env/ # 移动到安装目录
+    cd env/tophat-2.1.1.Linux_x86_64
+    ./tophat -v # 启动，./是当前目录的意思，不能省略
+```
+到目前为止，tophat已经可以在安装目录下正常启动了。如果你想要在任何目录下都可以启动它，有两种比较好的解决方案：
+1. 编辑.bashrc，在**文件末尾**添加别名（仅对你自己生效，[安装目录]为[绝对路径](https://www.baidu.com/)）
+```
+    vim ~/.bashrc
+    # 添加内容：alias tophat='[安装目录]/tophat-2.1.1.Linux_x86_64/tophat'
+    source ~/.bashrc
+```
+2. 将安装目录添加到PATH(以下两种选一种)
+```
+    # 只对你自己生效
+    vim ~/.bashrc
+    # 添加内容：export PATH=[安装目录]/tophat-2.1.1.Linux_x86_64/:$PATH
+    source ~/.bashrc # 立刻生效
+```
+---
+```
+    # 对所有用户生效
+    sudo vim /etc/profile
+    # 添加内容：export PATH=[安装目录]/tophat-2.1.1.Linux_x86_64/:$PATH
+    # 重启系统后生效
+```
+
 #### 手动编译  
   
 ## 配置软件源  
