--- a/软件管理.md
+++ b/软件管理.md
@@ -104,8 +104,11 @@ conda默认安装的包即是在默认的虚拟环境里面，如果你没有激
     conda remove -n [envname] --all # 删除虚拟环境
 ```  
 ### 手动安装  
-包管理器的出现固然能为我们使用 Linux 提供很大帮助，但毕竟它们是面向所有 Linux 用户的，因此并不包含所有生信人常用的工具。事实上，包管理器无法解决我们遇到的所有软件问题，虽然它们能够为我们节省时间，但仅限于它们能解决的部分。剩下的部分，我们需要亲自动手，它依然是充满挑战性的。但不用担心，问题一旦解决，亲自解决问题的成就感和积累的宝贵经验都属于你。当然，代价是你得进行多次尝试，这需要大量的时间和劳动力，以及屡次失败但依然坚持寻找问题根源的毅力。 
-我们将会通过tophat的安装让你了解手动安装的全过程，希望你有所收获。
+包管理器的出现固然能为我们使用 Linux 提供很大帮助，但毕竟它们是面向所有 Linux 用户的，因此并不包含所有生信人常用的工具。事实上，包管理器无法解决我们遇到的所有软件问题，虽然它们能够为我们节省时间，但仅限于它们能解决的部分。剩下的部分，我们需要亲自动手，它依然是充满挑战性的。但不用担心，问题一旦解决，亲自解决问题的成就感和积累的宝贵经验都属于你。当然，代价是你得进行多次尝试，这需要大量的时间和劳动力，以及屡次失败但依然坚持寻找问题根源的毅力。   
+为了理解软件安装过程的方便，你需要了解软件开发的全过程，以下是一个简要的软件开发流程示意图。
+![Github](https://github.com/ChongHui-007/Linux-recipe-for-BMC-learners/blob/master/material/dev.jpg)  
+从图中可以看出，计算机能够运行的文件一定是编译好的二进制文件，而开发人员们写的通常是工程代码，计算机不能直接运行这些工程代码。因此，大多数时候我们都要判断自己得到的是源文件还是二进制文件，据此判断是否需要先编译再执行。  
+我们将会通过tophat的安装让你了解手动安装的全过程，希望你有所收获。  
 #### 直接安装  
 tophat是生物信息学转录组分析的传统三件套（bowtie tophat cufflinks）之一，由约翰霍普斯金大学提供。它提供了预先编译好的包，这一类包不需要进行编译就可以直接安装和使用了。  
 ``` 
@@ -115,7 +118,8 @@ tophat是生物信息学转录组分析的传统三件套（bowtie tophat cuffli
     cd env/tophat-2.1.1.Linux_x86_64
     ./tophat -v # 启动，./是当前目录的意思，不能省略
 ```
-到目前为止，tophat已经可以在安装目录下正常启动了。如果你想要在任何目录下都可以启动它，有两种比较好的解决方案：
+到目前为止，tophat已经可以在安装目录下正常启动了。  
+如果你想要在任何目录下都可以启动它，有两种比较好的解决方案：
 1. 编辑.bashrc，在**文件末尾**添加别名（仅对你自己生效，[安装目录]为[绝对路径](https://www.baidu.com/)）
 ```
     vim ~/.bashrc
@@ -138,6 +142,19 @@ tophat是生物信息学转录组分析的传统三件套（bowtie tophat cuffli
 ```
 
 #### 手动编译  
-  
+tophat也提供了源码包，此类型的包需要编译才能在系统上运行。  
+```
+    wget -c https://ccb.jhu.edu/software/tophat/downloads/tophat-2.1.1.tar.gz # 下载
+    tar xvfz tophat-2.1.1.tar.gz
+    cd tophat-2.1.1
+    # 开始编译
+    ./configure --prefix=/path/to/tophat_base_dir --with-boost=/path/to/boost_prefix_dir # 需要预先安装包boost
+    make
+    make install
+    cd bin
+    ./tophat -v # 运行tophat，./不能省略
+```
+同样的，此时tophat已经可以在安装目录的bin文件夹下运行了。  
+如果想要在任何目录都可以启动tophat，添加别名和添加到PATH两种解决方案依然适用，只是**要添加的目录应改为[安装目录]/tophat-2.1.1/bin/**。  
 ## 配置软件源  
 
