--- a/用户管理.md
+++ b/用户管理.md
@@ -1,1 +1,35 @@
-。
+# 用户管理
+### 这些操作只有实验室管理员才可以执行
+
+常用的用户管理命令：
+```
+  useradd [username] # 新建用户
+  useradd -g group -G root [username] # 新建一个用户，同时属于group组和root组
+  passwd [username] # 为用户设置密码
+  usermod -g [groupname] [username] # 让用户属于[groupname]组
+  userdel -r [username] # 删除用户，同时删除属于该用户的所有目录，一般为/home/[username]/*
+```
+
+常用的用户组管理命令：
+```
+  groupadd [groupname] # 新建用户组
+  groupmod -n [newgroupname] [groupname] # 更改用户组名
+  groupdel [groupname] # 删除用户组
+```
+
+为用户授予root权限：  
+```
+    vim /etc/sudoers
+```
+找到如下的两行：  
+```
+    ## Allow root to run any commands anywhere  
+    root    ALL=(ALL)     ALL  
+```
+在后面添加  
+```
+    ## Allow root to run any commands anywhere  
+    root    ALL=(ALL)     ALL  
+    [username]    ALL=(ALL)     ALL  
+```
+保存即可  
