--- a/用户管理.md
+++ b/用户管理.md
@@ -22,7 +22,7 @@
 ```
   vim /etc/sudoers
 ```
-找到如下的两行：  
+找到如下的两行  
 ```
   ## Allow root to run any commands anywhere  
   root    ALL=(ALL)     ALL  
@@ -32,5 +32,25 @@
   ## Allow root to run any commands anywhere  
   root    ALL=(ALL)     ALL  
   [username]    ALL=(ALL)     ALL  
+```
+保存即可  
+## 为用户取消root授权  
+同样的操作，只需要将  
+```
+  ## Allow root to run any commands anywhere  
+  root    ALL=(ALL)     ALL  
+  [username]    ALL=(ALL)     ALL  
+```
+改为  
+```
+  ## Allow root to run any commands anywhere  
+  root    ALL=(ALL)     ALL  
+  # [username]    ALL=(ALL)     ALL  
+  # # 是注释的意思，意味着系统不读取该行
+```
+或删掉该行，成为  
+```
+  ## Allow root to run any commands anywhere  
+  root    ALL=(ALL)     ALL   
 ```
 保存即可  
