--- a/用户管理.md
+++ b/用户管理.md
@@ -46,7 +46,7 @@
   ## Allow root to run any commands anywhere  
   root    ALL=(ALL)     ALL  
   # [username]    ALL=(ALL)     ALL  
-  # # 是注释的意思，意味着系统不读取该行
+  # 是注释的意思，意味着系统不读取该行
 ```
 或删掉该行，成为  
 ```
