--- a/软件管理.md
+++ b/软件管理.md
@@ -1,15 +1,14 @@
 # 软件管理  
-基于主要交互方式的不同，Linux平台和windows平台的软件安装也相应的不同。Linux软件的安装很少是通过在窗口点击几次下一步实现的，而是通过命令告诉你的系统，让系统自行处理安装操作，只有少数至关重要的操作需要你亲自做决定。比如你只需要输入`pip install numpy`就可以安装好优秀的矩阵运算包numpy。  
-但这并不意味着Linux软件的安装是更为轻松的。抛却shell界面不如图形界面用户友好不说，大多数情况下Linux软件都有复杂的依赖关系，这是由软件的开源特性决定的。例如：你想要开发一个之前没有人开发过的工具，为了节省时间，一个很自然的想法是先试着找一些开源支持包，从中找到可以直接调用的程序接口，由此你的工具便和该支持包有了依赖关系。具体表现就是另一个人若想安装和使用你的工具，他必须同时安装被你调用的支持包。想象一下随着自由软件的流行，程序之间的依赖关系如同树形结构一般越来越复杂，A依赖B，B依赖C和D，C和D又分别依赖E、F和G、H，某一个用户为了安装A就得安装7个依赖包，他不得不从最底层的依赖包一个个安装，付出的时间成本将是巨大的。因此**为解决软件依赖关系而生的包管理器**的出现是必然的，包管理器成为主流也是大势所趋，所以我们要讨论的软件安装与我们所使用的包管理器密切相关。在讨论安装的具体操作之前，我们需要了解常用的包管理器。  
+基于主要交互方式的不同，Linux 平台和Windows平台的软件安装也相应的不同。Linux 软件的安装很少是通过在窗口点击几次下一步实现的，而是通过命令告诉你的系统，让系统自行处理安装操作，只有少数至关重要的操作需要你亲自做决定。比如你只需要输入`pip install numpy`就可以安装好优秀的矩阵运算包 numpy 。  
+但这并不意味着Linux软件的安装是更为轻松的。抛却 Shell 界面不如图形界面用户友好不说，大多数情况下Linux软件都有复杂的依赖关系，这是由软件的开源特性决定的。例如：你想要开发一个之前没有人开发过的工具，为了节省时间，一个很自然的想法是先试着找一些开源支持包，从中找到可以直接调用的程序接口，由此你的工具便和该支持包有了依赖关系。具体表现就是另一个人若想安装和使用你的工具，他必须同时安装被你调用的支持包。想象一下随着自由软件的流行，程序之间的依赖关系如同树形结构一般越来越复杂，A依赖B，B依赖C和D，C和D又分别依赖E、F和G、H，某一个用户为了安装A就得安装7个依赖包，他不得不从最底层的依赖包一个个安装，付出的时间成本将是巨大的。因此**为解决软件依赖关系而生的包管理器**的出现是必然的，包管理器成为主流也是大势所趋，所以我们要讨论的软件安装与我们所使用的包管理器密切相关。在讨论安装的具体操作之前，我们需要了解常用的包管理器。  
 ## 包管理器  
 在自由软件的世界向前发展的过程中，为了用户使用方便，开发人员们为用户开发了各种各样的包管理器。包管理器可以使软件的安装简单化，但另一方面由于自由软件太过“自由”，出现了各种易用程度不尽相同的包管理器，每个包管理器都有自己的用法。比较著名的包管理器有yum、apt、pacman、aur、pip、conda和portage等。基于我先前的推荐，此篇中我们将主要讨论**yum、apt、pip和conda**这四个包管理器。
 
-**yum**是由redhat开发的包管理器，主要被redhat系发行版，即red hat enterprise linux、centos和fedora等发行版采用。如果您有兴趣详细地了解它，请参阅由redhat编写的documentation中的[Chapter 14](https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/5/html/deployment_guide/c1-yum)  
-**apt**是由debian开发的包管理器，主要被debian系发行版，即debian、Ubuntu、elementaryos等发行版采用。如果您有兴趣详细地了解它，请参阅由Wikipedia词条[APT](https://zh.wikipedia.org/wiki/APT)及debian编写的说明文档[APT](https://wiki.debian.org/zh_CN/Apt)  
-**pip**是由Python开发团队开发的包管理器，从Python3开始就默认提供了，这意味着只要您安装了Python3以上的版本，您就可以直接通过pip管理软件了。如果您有兴趣详细地了解它，请参阅由pypi提供的[Project description](https://pypi.org/project/pip/)。
-> 此外，需要注意的是pip2与pip3可以同时共存，但pip2安装的软件不能同时用于pip3，也就是说如果某个程序是基于Python3编写的，那么你不能用pip2安装适用于该程序的依赖包。我们将在随后的问题解决当中再次提到这个问题。  
+**yum**是由redhat开发的包管理器，主要被redhat系发行版，即red hat enterprise linux、centos和fedora等发行版采用。**apt**是由debian开发的包管理器，主要被debian系发行版，即debian、Ubuntu、elementaryos等发行版采用。**pip**是由Python开发团队开发的包管理器，从Python3开始就默认提供了，这意味着只要您安装了Python3以上的版本，您就可以直接使用pip来管理包了。**conda**是由Continuum Analytics开发的包管理器，适用于管理Python, R, Node.js和Java等编写的程序的包管理。其不被任何编程语言默认提供，只能通过安装Anaconda或Miniconda来启用它。  
 
-**conda**是由Continuum Analytics开发的包管理器，适用于管理Python, R, Node.js和Java等编写的程序的包管理，其不被任何编程语言默认提供。只能通过安装Anaconda或Miniconda来启用它。如果您有兴趣详细地了解它，请参阅由Anaconda提供的[说明文档](https://docs.conda.io/en/latest/)  
+> 此外，需要注意的是pip2与pip3可以同时共存，但pip2安装的软件不能同时用于pip3，也就是说如果某个程序是基于Python3编写的，那么你不能用pip2安装适用于该程序的依赖包。我们将在随后的问题解决当中再次提到这个问题。   
+
+如果您有兴趣详细了解上述四个包管理器，可以阅读由包管理器提供方提供的说明文档：[yum](https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/5/html/deployment_guide/c1-yum)  [apt](https://wiki.debian.org/zh_CN/Apt)  [pip](https://pypi.org/project/pip/)  [conda](https://docs.conda.io/en/latest/)
 ## 软件管理  
 软件安装的具体操作与使用的包管理器密切相关。  
 **你应当把这三个部分按照需要进行替换：**
