--- a/软件管理.md
+++ b/软件管理.md
@@ -101,7 +101,7 @@ conda默认安装的包即是在默认的虚拟环境里面，如果你没有激
   conda remove -n [envname] --all # 删除虚拟环境
 ```  
 ### 手动安装  
-包管理器的出现固然能为我们使用 Linux 提供很大帮助，但毕竟它们是面向所有 Linux 用户的，因此并不包含所有生信人常用的工具。事实上，包管理器无法解决我们遇到的所有软件问题，虽然它们能够为我们节省时间，但仅限于它们能解决的部分。剩下的部分，我们需要亲自动手，它依然是充满挑战性的。但不用担心，问题一旦解决，亲自解决问题的成就感和积累的宝贵经验都属于你。当然，代价是你得进行多次尝试，这需要大量的时间和劳动力，以及屡次失败但依然坚持寻找问题根源的毅力。   
+包管理器的出现固然能为我们使用 Linux 提供很大帮助，但毕竟它们是面向所有 Linux 用户的，因此并不包含所有生信人常用的工具。事实上，包管理器无法解决我们遇到的所有软件问题，虽然它们能够为我们节省时间，但仅限于它们能解决的部分。剩下的部分，我们需要亲自动手，它依然是充满挑战性的。但不用担心，问题一旦解决，亲自解决问题的成就感和积累的宝贵经验都属于你。当然，代价是你得为此付出努力，通常你需要尝试很多次，这需要大量的时间、劳动力和屡次失败但依然坚持寻找问题根源的毅力。   
 为了理解软件安装过程的方便，你需要了解软件开发的全过程，以下是一个简要的软件开发流程示意图。
 ![Github](https://github.com/ChongHui-007/Linux-recipe-for-BMC-learners/blob/master/material/dev.jpg)  
 从图中可以看出，计算机能够运行的文件一定是编译好的二进制文件，而开发人员们写的通常是工程代码，计算机不能直接运行这些工程代码。因此，大多数时候我们都要判断自己得到的是源文件还是二进制文件，据此判断是否需要先编译再执行。  
