--- a/文件和文件夹操作.md
+++ b/文件和文件夹操作.md
@@ -37,3 +37,38 @@
   mv profile profile_2019.8.3 # 为备份的文件加上备份日期
   rm profile_2019.8.3 # 删除备份文件
 ```
+## vim文件编辑器的使用
+vim是在linux平台上广受欢迎的文件编辑器，以功能强大、可定制性丰富而著称。其只使用键盘的交互方式容易给刚接触的人很大的困扰，就连最基本的修改和保存文件都需要学习。但没关系，它只是我们用来处理文件的工具而已，大多数情况下我们用不到它的全部功能，因此系统地学习使用它的方方面面暂时是没有必要的。 
+一般而言，我们用到Vim编辑器的可能场景有：修改文件、复制和粘贴文件内容和粘贴来自网络的代码
+### 修改文件
+```
+  # 切换到英文输入法（必须）
+  vim [你要修改的文件名]
+  # 在键盘上按下i，进入插入模式进行修改
+  # 修改完毕后，按下左上角的Esc，输入:wq 即可保存文件和退出编辑器。注意是英文输入法下的:wq，包括冒号
+```
+### 复制粘贴
+```
+  # 切换到英文输入法（必须）
+  # 在键盘上按下Esc，进入Normal模式
+  # 在键盘上按下v，进入Visual模式
+  # 通过方向键控制光标，选中你要复制的内容
+  # 在键盘上按下y，进行复制
+  # 用方向键将光标移动到要粘贴的位置
+  # 按下键盘上的p，进行粘贴
+```
+### 粘贴外部代码
+```
+  # 一般而言，在Insert模式下可以直接通过鼠标粘贴内容，但如果你粘贴的是带有缩进的代码，往往你需要在粘贴之后重新调整缩进。
+  # 解决方案如下：
+  # 在键盘上按下Esc，进入Normal模式
+  # 在英文输入法状态下输入:set paste，进入粘贴模式
+  # 在键盘上按下i，进入Insert模式
+  # 用鼠标进行粘贴，会发现代码结构被保持得很好
+```
+另外，vim编辑器有自己的配置文件~/.vimrc，一份好的配置文件可以省去很多麻烦。我个人使用的Vim配置文件在我的[Profiles-used项目](https://github.com/ChongHui-007/profiles-used)里，直接copy到你的~/即可使用。  
+如果你想要了解和学习Vim编辑器的更多，可以参阅[Vim编辑器的 Github 项目主页](https://github.com/vim/vim)和网络大牛的教程[简明 Vim 练级攻略](https://coolshell.cn/articles/5426.html)。
+
+## Awk、Sed和Grep的使用
+这是一个新的世界，我也没用熟呢，用熟以后再更。  
+~~请参阅~~ 还是[百度](www.baidu.com)和[谷歌](www.google.com/ncr)吧，相关教程多到眼花缭乱。
