--- a/文件和文件夹操作.md
+++ b/文件和文件夹操作.md
@@ -66,6 +66,12 @@ vim是在linux平台上广受欢迎的文件编辑器，以功能强大、可定
   # 在键盘上按下i，进入Insert模式
   # 用鼠标进行粘贴，会发现代码结构被保持得很好
 ```
+### Ctrl+z
+```
+  # Vim编辑器下，撤回操作是通过在Normal模式下用u实现的，即
+  # 按下Esc，再按下u
+```
+
 另外，vim编辑器有自己的配置文件~/.vimrc，一份好的配置文件可以省去很多麻烦。我个人使用的Vim配置文件在我的[Profiles-used项目](https://github.com/ChongHui-007/profiles-used)里，直接copy到你的~/即可使用。  
 如果你想要了解和学习Vim编辑器的更多，可以参阅[Vim编辑器的 Github 项目主页](https://github.com/vim/vim)和网络大牛的教程[简明 Vim 练级攻略](https://coolshell.cn/articles/5426.html)。
 
