--- a/软件管理.md
+++ b/软件管理.md
@@ -4,11 +4,11 @@
 ## 包管理器  
 在自由软件的世界里，为了用户使用方便，开发人员们为用户开发了各种各样的包管理器。包管理器可以使软件的安装简单化，但另一方面由于自由软件太过“自由”，出现了各种易用程度不尽相同的包管理器，每个包管理器都有自己的用法。比较著名的包管理器有yum、apt、pacman、aur、pip、conda和portage等。基于我先前的推荐，此篇中我们将主要讨论**yum、apt、pip和conda**这四个包管理器。
 
-**yum**是由 Redhat开发的包管理器，主要被 Redhat 系发行版，即Red Hat Enterprise Linux、Centos 和 Fedora 等发行版采用。**apt**是由 Debian 开发的包管理器，主要被 Debian 系发行版，即 Debian、Ubuntu、Elementaryos 等发行版采用。**pip**是由Python开发团队开发的包管理器，从Python3开始就默认提供了，这意味着只要您安装了Python3以上的版本，您就可以直接使用pip来管理包了。**conda**是由Continuum Analytics开发的包管理器，适用于管理Python, R, Node.js和Java等编写的程序的包管理。其不被任何编程语言默认提供，只能通过安装Anaconda或Miniconda来启用它。  
+**yum**是由 Redhat开发的包管理器，主要被 Redhat 系发行版，即Red Hat Enterprise Linux、Centos 和 Fedora 等发行版采用。**apt**是由 Debian 开发的包管理器，主要被 Debian 系发行版，即 Debian、Ubuntu、Elementaryos 等发行版采用。**pip**是由Python开发团队开发的包管理器，从Python3开始就默认提供了，这意味着只要你安装了Python3以上的版本，你就可以直接使用pip来管理包了。**conda**是由Continuum Analytics开发的包管理器，适用于管理Python, R, Node.js和Java等编写的程序的包管理。其不被任何编程语言默认提供，只能通过安装Anaconda或Miniconda来启用它。  
 
 > 此外，需要注意的是pip2与pip3可以同时共存，但pip2安装的软件不能同时用于pip3，也就是说如果某个程序是基于Python3编写的，那么你不能用pip2安装适用于该程序的依赖包。我们将在随后的问题解决当中再次提到这个问题。   
 
-如果您有兴趣详细了解上述四个包管理器，可以阅读由包管理器提供方提供的说明文档：[yum](https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/5/html/deployment_guide/c1-yum)  [apt](https://wiki.debian.org/zh_CN/Apt)  [pip](https://pypi.org/project/pip/)  [conda](https://docs.conda.io/en/latest/)
+如果你有兴趣详细了解上述四个包管理器，可以阅读由包管理器提供方提供的说明文档：[yum](https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/5/html/deployment_guide/c1-yum)  [apt](https://wiki.debian.org/zh_CN/Apt)  [pip](https://pypi.org/project/pip/)  [conda](https://docs.conda.io/en/latest/)
 ## 软件管理  
 软件安装的具体操作与使用的包管理器密切相关。  
 **你应当把这三个部分按照需要进行替换：**
